<resources>
    <string name="app_name">ChatFirebase</string>
    <string name="hintEmail">Digite seu email</string>
    <string name="hintPassword">Digite sua senha</string>
    <string name="txt_criarconta">Não tem uma conta? Click aqui!</string>
    <string name="buttonLogin">Entrar</string>
    <string name="txt_usuario">Digit o Usuario</string>
    <string name="button_photo_perfil">Foto</string>
    <string name="contatct">Contatos</string>
    <string name="logout">Logout</string>
    <string name="message">Mensagens</string>
    <string name="send">Enviar</string>
    <string name="hintMessage">Digite sua mensagem</string>
</resources>
