<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/bgCorlor">

    <EditText
        android:id="@+id/editTextEmail"
        android:hint="@string/hintEmail"
        android:background="@drawable/bg_edittext_rounded"
        android:paddingLeft="8dp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <EditText
        android:id="@+id/editTextPassword"
        android:hint="@string/hintPassword"
        android:background="@drawable/bg_edittext_rounded"
        android:paddingLeft="8dp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
         />

    <Button
        android:id="@+id/buttonLogar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/buttonLogin"
        android:background="@drawable/bg_button_rounded"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/txtCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_criarconta"
        android:layout_marginTop="64dp"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogar"
        app:layout_constraintStart_toStartOf="@+id/buttonLogar"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogar"
        />
</androidx.constraintlayout.widget.ConstraintLayout>