<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity"
    android:background="@color/bgCorlor">

    <Button
        android:id="@+id/buttonPhotoPerfil"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/bg_button_photo_profile"
        android:text="@string/button_photo_perfil"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/bg_edittext_rounded"
        android:hint="@string/txt_usuario"
        android:paddingLeft="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPhotoPerfil" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_edittext_rounded"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:paddingLeft="8dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextUsuario"
        app:layout_constraintStart_toStartOf="@+id/editTextUsuario"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsuario" />

    <EditText
        android:id="@+id/editTextPassword"
        android:hint="@string/hintPassword"
        android:background="@drawable/bg_edittext_rounded"
        android:paddingLeft="8dp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        />

    <Button
        android:id="@+id/buttonLogar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/buttonLogin"
        android:background="@drawable/bg_button_rounded"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewPhotoPerfil"
        app:civ_border_width="3dp"
        app:civ_border_color="@android:color/holo_green_dark"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>